修正しました。

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
        <div class="header-right">
          <ul>
-          <li><a href="#section-01">About</a></li>
+          <li><a href="#abot">About</a></li>
           <li><a href="#section-01">Plan</a></li>
           <li><a href="#section-01">Contact</a></li>
         </ul>
@@ -38,10 +38,10 @@
 <div class="container">
   <div class="about-right">
     <div class="about">
-     <h1>
+     <h1 id="about">
        About
      </h1>
-     <img src="./img/placeholder.png" alt="picture">
+     <img class="picture" src="./img/placeholder.png" alt="picture">
    </div>
     <div class="container-wrap">
       <h2>Some text</h2>
